--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Git & Github</title>
+        <script src="app.js"></script>
     </head>
     <body>
         this is Git.
